# cosmic-monitor

./: .gitignore  Cargo.toml  README.md  build-flatpak.sh  com.zachvlat.cosmic-monitor.yml  com.zachvlat.cosmicfetch.yml  justfile
i18n/en/: cosmic_monitor.ftl
resources/: app.desktop  app.metainfo.xml
src/: app.rs  config.rs  i18n.rs  main.rs
